--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <title>React Redux Starter Kit</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.options.path%>css/font-awesome.min.css">
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.options.path%>css/bootstrap.min.css">
 </head>
 <body>
   <div id="root" style="height: 100%"></div>
